@@ -1,10 +1,7 @@
 package seedu.address.storage;
 
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -14,6 +11,7 @@ import seedu.address.model.person.Email;
 import seedu.address.model.person.Name;
 import seedu.address.model.person.Person;
 import seedu.address.model.person.Phone;
+import seedu.address.model.person.TagList;
 import seedu.address.model.tag.Tag;
 
 /**
@@ -58,9 +56,9 @@ class JsonAdaptedPerson {
         } else {
             email = null;
         }
-        tags.addAll(source.getTags().stream()
+        tags.addAll(source.getPrintableTags().stream()
                 .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
@@ -101,7 +99,7 @@ class JsonAdaptedPerson {
         }
 
 
-        final Set<Tag> modelTags = new HashSet<>(personTags);
+        final TagList modelTags = new TagList(personTags);
         return new Person(modelName, modelPhone, modelEmail, modelTags);
     }
 
